fix: remove horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ a {
     width: 98vw;
     box-sizing: border-box;
     padding: 10px;
-    margin: 30px;
+    margin: 30px 0;
     box-shadow: 15px 15px 10px aquamarine;
 }
 
