--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     box-sizing: border-box;
-    width: 99.5vw;
+    width: 98.5vw;
     border: 2px solid aquamarine;
     border-radius: 15px;
     box-shadow: 15px 15px 10px aquamarine;
