--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    width: 99.5vw;
+    width: 98.5vw;
     padding: 0 15px;
     box-sizing: border-box;
     border: 2px solid aquamarine;
